# KeyFigurator

./: .gitignore  CLAUDE.md  LOG.md  README.md  package-lock.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: README.md  decisions-log.md  design-config-app.md  vial-vs-custom-config-app.md
domains/: README.md
domains/config-app/: README.md
domains/hardware/: README.md
keyfigurator/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  vite.config.js
keyfigurator/src/: index.html  main.js  styles.css
keyfigurator/src-tauri/: Cargo.toml  tauri.conf.json
keyfigurator/src-tauri/capabilities/: default.json
keyfigurator/src-tauri/icons/: icon.icns
keyfigurator/src-tauri/src/: hid.rs  keycodes.rs  main.rs  model.rs  runner.rs
keyfigurator/tests/: smoke.spec.js
signals/: README.md
