[package]
name = "macropad-config"
version = "0.1.0"
description = "Macro Pad Pro configuration app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hidapi = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
